# inspect313

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
inspect313/: __init__.py  _from_code.py
tests/: test_signature.py  test_signature_from_frame.py
tests/test_example/: test_some_function.py
